<resources>
    <string name="app_name">Rezetopia</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="loginfacebook">log in with facebook</string>
    <string name="skip_login">skip log in</string>
    <string name="mobile">Mobile</string>
    <string name="name">Name</string>
    <string name="height_hint">Height in cm</string>
    <string name="update_password">Update Password</string>
    <string name="weight_hint">Weight in kg</string>
    <string name="player_name">Player Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="repassword">Re-Password</string>
    <string name="next">Next</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="terms">i accept the terms of rezetopia</string>
    <string name="search">search</string>
    <string name="slide_1_title">about us</string>
    <string name="slide_1_desc">RezeTopia has also launched the initiative"play with the lights on" in marketing for the professional players in the Egyptian and European clubs who can not promote their skills</string>
    <string name="sign_up_with_facebook">sign up with facebook</string>
    <string name="rezetopia">Rezetopia</string>
    <string name="number_of_teams"># teams</string>
    <string name="number_of_players"># players</string>
    <string name="six">6</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="current_password_hint">Enter current password</string>
    <string name="new_password_hint">Enter new password</string>
    <string name="phone">Phone number</string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">On Rezetopia ,you find a whole network that is only designed for footballers , so you can sign your weight, height,and position up</string>
    <string name="slide_3_title">we will launch!!</string>
    <string name="slide_3_desc">The website is currently in beta ,in this way you can sign up ,and stay tuned! It will be launched on May 8th , works like Facebook, thoroughly advanced for Football players </string>
    <string name="slide_4_title">know more!</string>
    <string name="slide_4_desc"> For more information, watch this episode on "On TV" goo.gl/c76LPa</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="facebook_app_id">2006084819714163</string>
    <string name="fb_login_protocol_scheme">fb2006084819714163</string>
    <string name="wronglogin">Incorrect email or password</string>
    <string name="wrongreset">wrong email or phone</string>
    <string name="exsistEmail">This mail is already exsist you can log in</string>
    <string-array name="spinner_carrer">
        <item>select career</item>
        <item>amature</item>
        <item>professional</item>

    </string-array>
    <string-array name="spinner_city">
        <item>select city</item>
        <item>cairo</item>
        <item>Helwan</item>
        <item>Nasr City</item>
        <item>Cairo</item>
        <item>Alexandria</item>
        <item>Giza</item>
        <item>Shubra El-Kheima</item>
        <item>Port Said</item>
        <item>Suez</item>
        <item>Luxor</item>
        <item>al-Mansura</item>
        <item>El-Mahalla El-Kubra</item>
        <item>Tanta</item>
        <item>Asyut</item>
        <item>Ismailia</item>
        <item>Fayyum</item>
        <item>Zagazig</item>
        <item>Aswan</item>
        <item>Damietta</item>
        <item>Damanhur</item>
        <item>al-Minya</item>
        <item>Beni Suef</item>
        <item>Qena</item>
        <item>Sohag</item>
        <item>Hurghada</item>
        <item>6th of October City</item>
        <item>Shibin El Kom</item>
        <item>Banha</item>
        <item>Arish</item>
        <item>Mallawi</item>
        <item>10th of Ramadan City</item>
        <item>Bilbais</item>
        <item>Marsa Matruh</item>
        <item>Idfu</item>
        <item>Mit Ghamr</item>
        <item>El-Hawamdeyya</item>
        <item>Desouk</item>
        <item>Qalyub</item>
        <item>Abu Kabir</item>
        <item>Kafr el-Dawwar</item>
        <item>Girga</item>
        <item>Akhmim</item>
        <item>Matareya</item>

    </string-array>
    <string-array name="spinner_playerPosition">
        <item>select Your Position</item>
        <item>amature</item>
        <item>Goalkeeper</item>
        <item>Defenders</item>
        <item>Midfielders </item>
        <item>Forwards </item>
    </string-array>
    <string-array name="spinner_foot">
        <item>Select Dominant Foot</item>
        <item>Right</item>
        <item>Left</item>
    </string-array>
    <string-array name="countries_array">
        <item>Select Your Country</item>
        <item>Egypt</item>
    </string-array>
    <string name="checkingNetwork">There is an error in network</string>
    <string name="empty_friends">No friends yet</string>
    <string name="general_setting">General Setting</string>
    <string name="player_info">Player Information</string>
    <string name="general_setting_hint">You can change general settings</string>
    <string name="page_like_hint">See who likes this page</string>
    <string name="who_can_post">Who can post on this page</string>
    <string name="page_name_error">Page name can not be empty</string>
    <string name="player_setting">Player Setting</string>
    <string name="privacy_setting">Privacy Setting</string>
    <string name="page_likes">Page Likes</string>
    <string name="privacy_setting_hint">Change privacy setting here</string>
    <string name="hobbies">Hobbies</string>
    <string name="interests">Interests</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="position">Position</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="birthday">Birthday</string>
    <string name="post_save_success">Post has been saved</string>
    <string name="done">Done</string>
    <string name="others">others</string>
    <string name="post_save_failure">Post save error</string>
    <string name="server_error">The server could not be found. Please try again after some time!</string>
    <string name="connection_error">Cannot connect to Internet&#8230;Please check your connection!</string>
    <string name="parsing_error">Parsing error! Please try again after some time!</string>
    <string name="time_out">Connection TimeOut! Please check your internet connection.</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="empty_date">Empty Data</string>
    <string name="level">Level</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="accept">Accept</string>
    <string name="replay">Replay</string>
    <string name="matches">Matches</string>
    <string name="points">points</string>
    <string name="message">message</string>
    <string name="invite">invite</string>
    <string name="tell_something">Tell something&#8230;</string>
    <string name="add">Add +</string>
    <string name="unfriend">Unfriend</string>
    <string name="unlike">Unlike</string>
    <string name="load_more">Load more&#8230;</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="empty_post">Empty Post</string>
    <string name="no_posts">there are no posts</string>
    <string name="follow">Follow</string>
    <string name="schedule">Schedule</string>
    <string name="details">Details</string>
    <string name="amenities">Amenities</string>
    <string name="review">Reviews</string>
    <string name="book_now">Book now</string>
    <string name="arena_number">Arena number</string>
    <string name="booking">Booking</string>
    <string name="your_news_feed">Your news feed&#8230;</string>
    <string name="add_to_your_post">Add to your post</string>
    <string name="validate_address">Type Your Address</string>
    <string name="validate_phone">Type Your Phone Number</string>
    <string name="validate_city">Select Your City</string>
    <string name="validate_career">Select Your career</string>
    <string name="validate_nag">Select Your country</string>
    <string name="validate_foot">Select Dominant Foot</string>
    <string name="validate_position">Select Your Position</string>
    <string name="write_comment">Write a comment&#8230;</string>
    <string name="write_replay">Write a replay&#8230;</string>
    <string name="users">Users</string>
    <string name="groups">Groups</string>
    <string name="events">Events</string>
    <string name="my_teams">My Teams</string>
    <string name="my_coins">My Pounds</string>
    <string name="my_orders">My Orders</string>
    <string name="setting">Settings</string>
    <string name="report_to_rezetopia">Report to Rezetopia</string>
    <string name="log_out">Logout</string>
    <string name="search_result">No result</string>
    <string name="edit">Edit</string>
    <string name="paste">Paste</string>
    <string name="dont_have_posts">You do not have posts yet</string>
    <string name="welcome_page">Play With Rezetopia</string>
    <string name="pages">Pages</string>
    <string name="remove">Remove</string>
    <string name="text_saved">Copied to Clipboard</string>
    <string name="save_post">Save post</string>
    <string name="save_changes">Save changes</string>
    <string name="unsave_post">Remove</string>
    <string name="report_post">Report</string>
    <string name="image">Image</string>
    <string name="photos">Photos</string>
    <string name="admins">Admins</string>
    <string name="videos">Videos</string>
    <string name="skills">Skills</string>
    <string name="about">About</string>
    <string name="website">Website</string>
    <string name="bio">Bio</string>
    <string name="general_information">General Information</string>
    <string name="video">Video</string>
    <string name="image_video">Image/Video</string>
    <string name="check_in">Check in</string>
    <string name="tag">Tag friends</string>
    <string name="product">Product</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="post">Post</string>
    <string name="upload">Upload</string>
    <string name="amount">Amount</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="pound">Point</string>
    <string name="buy">Buy now</string>
    <string name="sold_out">Sold out</string>
    <string name="member">member</string>
    <string name="members">members</string>
    <string name="people_likes">people who like this</string>
    <string name="home">Home</string>
    <string name="report">Report</string>
    <string name="add_friend">Add Friend</string>
    <string name="secret">Secret</string>
    <string name="closed">Closed</string>
    <string name="public_">Public</string>
    <string name="view">View</string>
    <string name="copy">Copy</string>
    <string name="update_pp">Update profile picture</string>
    <string name="updated">Updated</string>
    <string name="update_cover">Update cover photo</string>
    <string name="create_team">Create Team</string>
    <string name="address">Address</string>
</resources>